# open-farming-hackdays-label-creator

./: .gitignore  .mcp.json  404.html  CNAME  Cargo.toml  Dioxus.toml  LICENSE  Makefile  Makefile.toml  README.md  api_konzept.md  blv_biosuisse_mapping.csv  code_dump.html  index.html  input.css  package-lock.json  package.json  refactoring_needs.md  tailwind.config.js  tailwind.css  template.html
.github/workflows/: check.yml  deploy-production.yml  deploy.yml  rust-build.yml
assets/: open-farming-hackdays-label-creator-06a7a57a4e8ace2d.js  open-farming-hackdays-label-creator-06a7a57a4e8ace2d.js.br  open-farming-hackdays-label-creator-20ff1d087d5d539b.js  open-farming-hackdays-label-creator-20ff1d087d5d539b.js.br  open-farming-hackdays-label-creator-2581dd5a95239eed.js  open-farming-hackdays-label-creator-2581dd5a95239eed.js.br  open-farming-hackdays-label-creator-39f3b0917e51b1b9.js  open-farming-hackdays-label-creator-39f3b0917e51b1b9.js.br  open-farming-hackdays-label-creator-3fdffc4310bf43d6.js  open-farming-hackdays-label-creator-3fdffc4310bf43d6.js.br  open-farming-hackdays-label-creator-40e373228e1e64e3.js  open-farming-hackdays-label-creator-40e373228e1e64e3.js.br  open-farming-hackdays-label-creator-5053e4ed7d4a5539.js  open-farming-hackdays-label-creator-5053e4ed7d4a5539.js.br  open-farming-hackdays-label-creator-59052484b317eaed.js  open-farming-hackdays-label-creator-59052484b317eaed.js.br  open-farming-hackdays-label-creator-5c3086c77bc6176d.js  open-farming-hackdays-label-creator-5c3086c77bc6176d.js.br  open-farming-hackdays-label-creator-62a01a898191c7dc.js  open-farming-hackdays-label-creator-62a01a898191c7dc.js.br  open-farming-hackdays-label-creator-637392a5a64f7898.js  open-farming-hackdays-label-creator-637392a5a64f7898.js.br  open-farming-hackdays-label-creator-6c4589898ef03f06.js  open-farming-hackdays-label-creator-6c4589898ef03f06.js.br  open-farming-hackdays-label-creator-72a13ba06d385990.js  open-farming-hackdays-label-creator-72a13ba06d385990.js.br  open-farming-hackdays-label-creator-8717f5b6f00befe3.js  open-farming-hackdays-label-creator-8717f5b6f00befe3.js.br  open-farming-hackdays-label-creator-8fff6a70b5afc5e0.js  open-farming-hackdays-label-creator-8fff6a70b5afc5e0.js.br  open-farming-hackdays-label-creator-98958bef11220ba5.js  open-farming-hackdays-label-creator-98958bef11220ba5.js.br  open-farming-hackdays-label-creator-9c5f834fbb446750.js  open-farming-hackdays-label-creator-9c5f834fbb446750.js.br  open-farming-hackdays-label-creator-9f5b81fe8ff98eff.js  open-farming-hackdays-label-creator-9f5b81fe8ff98eff.js.br  open-farming-hackdays-label-creator-a1177ddb418493c2.js  open-farming-hackdays-label-creator-a1177ddb418493c2.js.br  open-farming-hackdays-label-creator-a917f1c39d44d985.js  open-farming-hackdays-label-creator-a917f1c39d44d985.js.br  (+233 more)
assets/dioxus/: label-creator.js  label-creator.js.br  label-creator_bg.wasm  label-creator_bg.wasm.br
bio/: index.html
core/src/: lib.rs
impressum/: index.html
knospe/: index.html
lebensmittelrecht/: index.html
locales/: TODO.yml  de-CH.yml  fr-CH.yml  it-CH.yml
open-farming-hackdays-label-creator/knospe/: index.html
public/: 404-prod.html  CNAME
src/: api.rs  category_service.rs  core.rs  food_db.csv  form.rs  ingredient_aliases.csv  knospe.css  layout.rs  main.rs  model.rs  nl2br.rs  persistence.rs  processing_rules.csv  processing_service.rs  routes.rs  rules.rs  shared.rs
src/components/: amount_price.rs  amount_type_select.rs  card_stack.rs  category_selector_modal.rs  certification_body_select.rs  checkbox_input.rs  conditional_display.rs  country_select.rs  cross_level_lock.rs  date_input.rs  field_group_1.rs  field_group_2.rs  field_help.rs  form_field.rs  icons.rs  impressum.rs  info_icon.rs  ingredient_detail.rs  ingredient_pane.rs  ingredient_path.rs  ingredient_symbols.rs  ingredients_table.rs  internal_note_mark.rs  label_preview.rs  link_share_modal.rs  miller_modal.rs  mod.rs  modal.rs  multi_country_select.rs  navbar.rs  saved_ingredients_manager.rs  (+6 more)
tests/: e2e_flows.rs  e2e_label.rs  e2e_recipes.rs  e2e_smoke.rs  e2e_ux.rs  e2e_validation.rs  locale_parity.rs
wasm/: open-farming-hackdays-label-creator.js  open-farming-hackdays-label-creator.js.br  open-farming-hackdays-label-creator_bg.wasm  open-farming-hackdays-label-creator_bg.wasm.br
(+32 files in other folders)
