[package]
name = "open-farming-hackdays-label-creator"
version = "0.4.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
dioxus = { version = "0.6.3", features = ["router", "web"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
web-sys = { version = "0.3.77", features = ["Navigator", "Clipboard", "Storage", "Window", "Location", "Document", "HtmlTextAreaElement", "Node", "Element", "HtmlElement"] }
serde_qs = "0.14.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
strum = "0.27.1"
strum_macros = "0.27.1"
rust-i18n = "3.1.3"
markdown = "1.0.0-alpha.22"
gloo = { version = "0.11", features = ["net", "timers", "futures"] }
urlencoding = "2.1"
tracing = "0.1"

[build-dependencies]
built = { version = "0.7", features = ["chrono"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["de-CH", "fr-CH", "it-CH"]

# The default locale, default: "en".
default-locale = "de-CH"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "locales"
