[package]
name = "open-farming-hackdays-label-creator"
version = "0.8.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hidebio = []

[dependencies]
csv = "1.4"
dioxus = { version = "0.7.7", features = ["router", "web"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
web-sys = { version = "0.3.97", features = ["Navigator", "Clipboard", "Storage", "Window", "Location", "Document", "HtmlTextAreaElement", "Node", "Element", "HtmlElement"] }
serde_qs = "1.1"
wasm-bindgen = "0.2.120"
js-sys = "0.3.97"
wasm-bindgen-futures = "0.4.70"
strum = "0.28"
strum_macros = "0.28"
rust-i18n = "4.0"
markdown = "1.0.0"
gloo = { version = "0.12", features = ["net", "timers", "futures"] }
urlencoding = "2.1.3"
tracing = "0.1.44"

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[dev-dependencies]
fantoccini = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["de-CH", "fr-CH", "it-CH"]

# The default locale, default: "en".
default-locale = "de-CH"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "locales"
